--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,6 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
-
+<div class="jumbotron text-center">
+  <h2 id="title">{{#link-to 'application'}}My Book-Reviews{{/link-to}}</h2>
+  {{#link-to 'books'}}<button class="btn btn-primary">All Books</button>{{/link-to}}
+  {{#link-to 'books.new'}}<button class="btn btn-primary">Add new book</button>{{/link-to}}
+</div>
 {{outlet}}
